컨텐츠 프로그래밍 및 OIT 개선 작업.
컨텐츠 프로그래밍 및 OIT 개선 작업.

--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -71,6 +71,7 @@
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Map\Portal.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Map\FadeInOut.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -147,5 +148,6 @@
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Map\Portal.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Map\FadeInOut.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.h" />
   </ItemGroup>
 </Project>
