--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Map\FadeInOut.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemyRandomPattern.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_EliteMonsterNormalOrHeavyAttack.cpp" />
@@ -251,6 +252,7 @@
     <ClCompile Include="src\DUOLClient\Player\Weapon_AreaWave.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_IsTargetDie.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Map\FadeInOut.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_RushPattern.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_EliteEnemyRandomPattern.h" />
