--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
@@ -125,6 +125,7 @@
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_AccumulationTimer.cpp" />
     <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_LerpLookAt.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Scrollbar.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\CameraEventManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Image.h" />
@@ -255,5 +256,7 @@
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_AccumulationTimer.h" />
     <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_LerpLookAt.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Scrollbar.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\CameraEventManager.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\CameraEventInfo.h" />
   </ItemGroup>
 </Project>
