컨텐츠 프로그래밍 보스 AI 작성 중.
컨텐츠 프로그래밍 중간보스 AI 작성 중. 잠시 미뤄두고 보스 AI 작성할 듯.

--- a/DUOLClient/DUOLClient.vcxproj.filters
+++ b/DUOLClient/DUOLClient.vcxproj.filters
@@ -76,6 +76,7 @@
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\EnemyAudioManager.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Contents\DominationArea.cpp" />
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\EnemyData.h" />
@@ -157,5 +158,6 @@
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_SetNavOnRigidbodyOff.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyAudioManager.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Contents\DominationArea.h" />
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.h" />
   </ItemGroup>
 </Project>
