중간 보스 및 최종 보스 ai 작업 중.
중간 보스 및 최종 보스 ai 작업 중.

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -179,6 +179,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Contents\DominationArea.cpp" />
     <ClCompile Include="src\DUOLClient\Manager\EnemyAudioManager.cpp" />
@@ -257,6 +258,7 @@
     <ClCompile Include="src\DUOLClient\Player\Weapon_AreaWave.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\ECS\Component\Enemy\BossEnemy_Weapon_Sword.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BossEnemyRandomPattern.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Contents\DominationArea.h" />
     <ClInclude Include="include\DUOLClient\Manager\EnemyAudioManager.h" />
